docker-k8s-workshop/day3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-hello
  template:
    metadata:
      labels:
        app: node-hello
    spec:
      containers:
      - name: node-hello
        image: somyanegi/node-hello:day1
        ports:
        - containerPort: 8080
