docker-k8s-workshop/day3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hello-clusterip
spec:
  type: ClusterIP
  selector:
    app: node-hello
  ports:
    - port: 80
      targetPort: 8080
 
---
 
apiVersion: v1
kind: Service
metadata:
  name: node-hello-nodeport
spec:
  type: NodePort
  selector:
    app: node-hello
  ports:
    - port: 80
      targetPort: 8080
