docker-k8s-workshop/day3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: node.local
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: node-hello-clusterip
                port:
                  number: 80
